[package]
name = "toolbox"
version = "0.1.1"
edition = "2021"

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
codegen-units = 1

[dependencies.eframe]
version = "0.31.0"
features = ["glow"]
default-features = false

[dependencies.winapi]
version = "0.3.9"
features = ["winuser", "shellapi"]

[build-dependencies]
winres = "0.1"
